--- a/index.html
+++ b/index.html
@@ -88,10 +88,9 @@
             <div class="teaser">
                 <div>
                     <div>
-                        <div id="loadingText" class="loading-text" style="display: none;">Loading...</div>
+                        <!--<div id="loadingText" class="loading-text" style="display: none;">Loading...</div>-->
 
                         <div class="interation hidden divTop slider">
-                            <!--<div class="progress" id="progressTop"></div>-->
                             <div></div>
                             <div>
                                 <p>Música</p>
@@ -143,194 +142,43 @@
                         </div>
 
                         <!----------------------------------------Track 1---------------------------------------->
-                        <!----------------------------------------Track 1---------------------------------------->
                         <div id="faixa1" class="track1 mediaTrack ">
-                            <video class="video" preload="auto">
-                                <source src="data/track/1/Luz1_video.mp4" type="video/mp4">
-                            </video>
-                            <video muted class="legendas" preload="auto">
-                                <source src="data/faixas/1/legendas.mp4" type="video/mp4">
-                            </video>
-                            <audio class="poesia">
-                                <source src="data/track/1/Luz1_voz.wav" type="audio/wav">
-                            </audio>
-                            <audio class="jazz">
-                                <source src="data/track/1/Luz1_instrumental.wav" type="audio/wav">
-                            </audio>
-                        </div>
-
-                        <!----------------------------------------Track 2---------------------------------------->
-                        <div id="faixa2" class="track2 mediaTrack">
-                            <video class="video" preload="auto">
-                                <source src="data/track/2/Luz2_video.mp4" type="video/mp4">
-                            </video>
-                            <video muted class="legendas" preload="auto">
-                                <source src="data/faixas/1/legendas.mp4" type="video/mp4">
-                            </video>
-                            <audio class="poesia">
-                                <source src="data/track/2/Luz2_voz.wav" type="audio/wav">
-                            </audio>
-                            <audio class="jazz">
-                                <source src="data/track/2/Luz2_instrumental.wav" type="audio/wav">
-                            </audio>
-                        </div>
-
-                        <!----------------------------------------Track 3---------------------------------------->
-                        <div id="faixa3" class="track3 mediaTrack">
-                            <video class="video" preload="auto">
-                                <source src="data/track/3/Luz3_video.mp4" type="video/mp4">
-                            </video>
-                            <video muted class="legendas" preload="auto">
-                                <source src="data/faixas/1/legendas.mp4" type="video/mp4">
-                            </video>
-                            <audio class="poesia">
-                                <source src="data/track/3/Luz3_voz.wav" type="audio/wav">
-                            </audio>
-                            <audio class="jazz">
-                                <source src="data/track/3/Luz3_instrumental.wav" type="audio/wav">
-                            </audio>
-                        </div>
-
-                        <!----------------------------------------Track 4---------------------------------------->
-                        <div id="faixa4" class="track4 mediaTrack">
-                            <video class="video" preload="auto">
-                                <source src="data/track/4/Luz4_video.mp4" type="video/mp4">
-                            </video>
-                            <video muted class="legendas" preload="auto">
-                                <source src="data/faixas/1/legendas.mp4" type="video/mp4">
-                            </video>
-                            <audio class="poesia">
-                                <source src="data/track/4/Luz4_voz.wav" type="audio/wav">
-                            </audio>
-                            <audio class="jazz">
-                                <source src="data/track/4/Luz4_instrumental.wav" type="audio/wav">
-                            </audio>
-                        </div>
-
-                        <!----------------------------------------Track 5---------------------------------------->
-                        <div id="faixa5" class="track5 mediaTrack">
-                            <video class="video" preload="auto">
-                                <source src="data/track/5/Luz5_video.mp4" type="video/mp4">
-                            </video>
-                            <video muted class="legendas" preload="auto">
-                                <source src="data/faixas/1/legendas.mp4" type="video/mp4">
-                            </video>
-                            <audio class="poesia">
-                                <source src="data/track/5/Luz5_voz.wav" type="audio/wav">
-                            </audio>
-                            <audio class="jazz">
-                                <source src="data/track/5/Luz5_instrumental.wav" type="audio/wav">
-                            </audio>
-                        </div>
-
-                        <!----------------------------------------Track 6---------------------------------------->
-                        <div id="faixa6" class="track6 mediaTrack">
-                            <video class="video" preload="auto">
-                                <source src="data/track/6/Luz6_video.mp4" type="video/mp4">
-                            </video>
-                            <video muted class="legendas" preload="auto">
-                                <source src="data/faixas/1/legendas.mp4" type="video/mp4">
-                            </video>
-                            <audio class="poesia">
-                                <source src="data/track/6/Luz6_voz.wav" type="audio/wav">
-                            </audio>
-                            <audio class="jazz">
-                                <source src="data/track/6/Luz6_instrumental.wav" type="audio/wav">
-                            </audio>
-                        </div>
-
-                        <!----------------------------------------Track 7---------------------------------------->
-                        <div id="faixa7" class="track7 mediaTrack">
-                            <video class="video" preload="auto">
-                                <source src="data/track/7/Luz7_video.mp4" type="video/mp4">
-                            </video>
-                            <video muted class="legendas" preload="auto">
-                                <source src="data/faixas/1/legendas.mp4" type="video/mp4">
-                            </video>
-                            <audio class="poesia">
-                                <source src="data/track/7/Luz7_voz.wav" type="audio/wav">
-                            </audio>
-                            <audio class="jazz">
-                                <source src="data/track/7/Luz7_instrumental.wav" type="audio/wav">
-                            </audio>
-                        </div>
-
-                        <!----------------------------------------Track 8---------------------------------------->
-                        <div id="faixa8" class="track8 mediaTrack">
-                            <video class="video" preload="auto">
-                                <source src="data/track/8/Luz8_video.mp4" type="video/mp4">
-                            </video>
-                            <video muted class="legendas" preload="auto">
-                                <source src="data/faixas/1/legendas.mp4" type="video/mp4">
-                            </video>
-                            <audio class="poesia">
-                                <source src="data/track/8/Luz8_voz.wav" type="audio/wav">
-                            </audio>
-                            <audio class="jazz">
-                                <source src="data/track/8/Luz8_instrumental.wav" type="audio/wav">
-                            </audio>
-                        </div>
-                        <!----------------------------------------Track 9---------------------------------------->
-                        <div id="faixa9" class="track9 mediaTrack">
-                            <video class="video" preload="auto">
-                                <source src="data/track/9/Luz9_video.mp4" type="video/mp4">
-                            </video>
-                            <video muted class="legendas" preload="auto">
-                                <source src="data/faixas/1/legendas.mp4" type="video/mp4">
-                            </video>
-                            <audio class="poesia">
-                                <source src="data/track/9/Luz9_voz.wav" type="audio/wav">
-                            </audio>
-                            <audio class="jazz">
-                                <source src="data/track/9/Luz9_instrumental.wav" type="audio/wav">
-                            </audio>
-                        </div>
-                        <!----------------------------------------Track 10---------------------------------------->
-                        <div id="faixa10" class="track10 mediaTrack">
-                            <video id="videoFaixa10" class="video" preload="auto">
-                                <source src="data/track/10/Luz10_video.mp4" type="video/mp4">
-                            </video>
-                            <video muted class="legendas" preload="auto">
-                                <source src="data/faixas/1/legendas.mp4" type="video/mp4">
-                            </video>
-                            <audio class="poesia">
-                                <source src="data/track/10/Luz10_voz.wav" type="audio/wav">
-                            </audio>
-                            <audio class="jazz">
-                                <source src="data/track/10/Luz10_instrumental.wav" type="audio/wav">
-                            </audio>
+                            <video preload="auto" id="video" class="video"></video>
+                            <video preload="auto" muted id="legendas" class="legendas"></video>
+                            <audio preload="auto" id="poesia" class="poesia"> </audio>
+                            <audio preload="auto" id="jazz" class="jazz"></audio>
                         </div>
                     </div>
                     <div class="grid gridProgram faixas">
                         <div class="desktopNone"></div>
                         <div>
-                            <p class="hover-link faixa textAlignRight faixaNum active-track" data-track="faixa1">01</p>
-                            <p class="hover-link faixa textAlignRight faixaNum" data-track="faixa2">02</p>
-                            <p class="hover-link faixa textAlignRight faixaNum" data-track="faixa3">03</p>
-                            <p class="hover-link faixa textAlignRight faixaNum" data-track="faixa4">04</p>
+                            <p class="hover-link faixa textAlignRight faixaNum active-track" data-track="1" onclick="loadGroup(1)">01</p>
+                            <p class="hover-link faixa textAlignRight faixaNum" data-track="2" onclick="loadGroup(2)">02</p>
+                            <p class="hover-link faixa textAlignRight faixaNum" data-track="3" onclick="loadGroup(3)">03</p>
+                            <p class="hover-link faixa textAlignRight faixaNum" data-track="4" onclick="loadGroup(4)">04</p>
                             <p><br></p>
                             <p><br></p>
-                            <p class="hover-link faixa textAlignRight faixaNum" data-track="faixa5">05</p>
-                            <p class="hover-link faixa textAlignRight faixaNum" data-track="faixa6">06</p>
-                            <p class="hover-link faixa textAlignRight faixaNum" data-track="faixa7">07</p>
+                            <p class="hover-link faixa textAlignRight faixaNum" data-track="5" onclick="loadGroup(5)">05</p>
+                            <p class="hover-link faixa textAlignRight faixaNum" data-track="6" onclick="loadGroup(6)">06</p>
+                            <p class="hover-link faixa textAlignRight faixaNum" data-track="7" onclick="loadGroup(7)">07</p>
                             <p><br></p>
-                            <p class="hover-link faixa textAlignRight faixaNum" data-track="faixa8">08</p>
-                            <p class="hover-link faixa textAlignRight faixaNum" data-track="faixa9">09</p>
-                            <p class="hover-link faixa textAlignRight faixaNum" data-track="faixa10">10</p>
+                            <p class="hover-link faixa textAlignRight faixaNum" data-track="8" onclick="loadGroup(8)">08</p>
+                            <p class="hover-link faixa textAlignRight faixaNum" data-track="9" onclick="loadGroup(9)">09</p>
+                            <p class="hover-link faixa textAlignRight faixaNum" data-track="10" onclick="loadGroup(10)">10</p>
                         </div>
                         <div class="faixaTitle">
-                            <p class="hover-link faixa faixaNum active-track" data-track="faixa1">Luz</p>
-                            <p class="hover-link faixa faixaNum" data-track="faixa2">Fim de Tarde</p>
-                            <p class="hover-link faixa faixaNum" data-track="faixa3">Instantâneo</p>
-                            <p class="hover-link faixa faixaNum" data-track="faixa4">Dependência /<br>Correntes
+                            <p class="hover-link faixa faixaNum active-track" data-track="1" onclick="loadGroup(1)">Luz</p>
+                            <p class="hover-link faixa faixaNum" data-track="2" onclick="loadGroup(2)">Fim de Tarde</p>
+                            <p class="hover-link faixa faixaNum" data-track="3" onclick="loadGroup(3)">Instantâneo</p>
+                            <p class="hover-link faixa faixaNum" data-track="4" onclick="loadGroup(4)">Dependência /<br>Correntes
                                 <br>Marítimas
                             </p>
-                            <p class="hover-link faixa faixaNum" data-track="faixa5">Periferia</p>
-                            <p class="hover-link faixa faixaNum" data-track="faixa6">O Cão Sozinho</p>
-                            <p class="hover-link faixa faixaNum" data-track="faixa7">Canção dos <br>Brancos Negros</p>
-                            <p class="hover-link faixa faixaNum" data-track="faixa8">Altura</p>
-                            <p class="hover-link faixa faixaNum" data-track="faixa9">Humanidade</p>
-                            <p class="hover-link faixa faixaNum" data-track="faixa10">Arqueologia</p>
+                            <p class="hover-link faixa faixaNum" data-track="5" onclick="loadGroup(5)">Periferia</p>
+                            <p class="hover-link faixa faixaNum" data-track="6" onclick="loadGroup(6)">O Cão Sozinho</p>
+                            <p class="hover-link faixa faixaNum" data-track="7" onclick="loadGroup(7)">Canção dos <br>Brancos Negros</p>
+                            <p class="hover-link faixa faixaNum" data-track="8" onclick="loadGroup(8)">Altura</p>
+                            <p class="hover-link faixa faixaNum" data-track="9" onclick="loadGroup(9)">Humanidade</p>
+                            <p class="hover-link faixa faixaNum" data-track="10" onclick="loadGroup(10)">Arqueologia</p>
                         </div>
                     </div>
                 </div>
